* 1.2.2
* bug fix, update WebSocketCodec decode 4 java.nio.BufferUnderflowException
* bug fix, check if channel open when slice buf remain
* add RingSequence
* add BUF_THREAD_YIELD option
* update use Util.now instead of System.currentTimeMillis()
* update Util.stackTraceToString to use thread local vars
* update all.pom.xml
* update set ReceivedShutdown to true to shutdown ssl quiet
* update adapt jdk11 unsafe & ByteBuffer

sample
* update proxy